--- a/src/Components/Navigator/Navigator.css
+++ b/src/Components/Navigator/Navigator.css
@@ -1,17 +1,54 @@
+nav{
+  box-shadow: 0 0 25px 0 black;
+}
 
 .dropdown-content {
-    display: none;
-    min-width: 20vw;
-    position: absolute;
-    background-color: #f1f1f1;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-  }
-  
-  
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
+  display: none;
+  min-width: 20vw;
+  position: absolute;
+  background-color: #f1f1f1;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.btn {
+  display: block;
+  text-decoration: none;
+  color: #333;
+  border: 2px solid #333;
+  letter-spacing: 2px;
+  text-align: center;
+  position: relative;
+  transition: all .55s;
+}
+
+.btn:after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: white;
+  transition: all .75s;
+}
+
+.btn:hover {
+  color: black;
+}
+
+.btn:hover:after {
+  width: 100%;
+}
+
+.btn span {
+  position: relative;
+  z-index: 2;
+}
