--- a/src/Components/Navigator/Navigator.css
+++ b/src/Components/Navigator/Navigator.css
@@ -1,5 +1,5 @@
-nav{
-  box-shadow: 0 0 25px 0 black;
+nav {
+  background: white;
 }
 
 .dropdown-content {
@@ -22,7 +22,7 @@ nav{
   display: block;
   text-decoration: none;
   color: #333;
-  border: 2px solid #333;
+  border: 2px solid darkgray;
   letter-spacing: 2px;
   text-align: center;
   position: relative;
@@ -36,7 +36,7 @@ nav{
   left: 0;
   width: 0;
   height: 100%;
-  background: white;
+  background: darkgray;
   transition: all .75s;
 }
 
@@ -51,4 +51,12 @@ nav{
 .btn span {
   position: relative;
   z-index: 2;
+}
+
+input{
+  background-color: darkgray;
+}
+
+.searchBtn{
+  background-color: darkgray;
 }
