--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,15 @@
   width: 2rem;
   height: auto;
 }
+
+.reveal{
+  transform: translateY(150px);
+  opacity: 0;
+  transition: all 0.5s ease;
+}
+
+.reveal.active{
+  
+  transform: translateY(0px);
+  opacity: 1;
+}
