--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 
@@ -10,13 +11,23 @@
 }
 
 .reveal{
+  overflow-y: hidden;
   transform: translateY(150px);
   opacity: 0;
   transition: all 0.5s ease;
 }
 
 .reveal.active{
-  
   transform: translateY(0px);
   opacity: 1;
+}
+
+
+.modal{
+  z-index: 3;
+  position: fixed;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 5px 10px #888888;
 }
